--- a/index.html
+++ b/index.html
@@ -9,16 +9,11 @@
 <body>
     <table cellspacing="25">
         <tr>
-            <td> <img src="https://crop-circle.imageonline.co/crop-circle.png" alt="binoy's Profile picture"></td>
+            <td> <img src="Image\download.png" alt="binoy's Profile picture"></td>
             <td><h1><em><strong>Binoy Mahata</strong></em></h1>
                 <p><em>Student of <strong><a href="https://iti.wb.gov.in/institute/home/jhargram">Jhargram Govt ITI</a></strong></em></p>
                 <br>
-                <p>Why I am learing CODE Language.
-
-                    We all know that my learning shedule is based on some books, 
-                    but I always want to learn computer as a programmer 
-                    or as a developer in this worlds language. 
-                    I am always check the connection.</p></td>
+                <p>Naturally I am a Student, After Completing My Graguate try to find new varriables to improve my Standings in A better Place.</p></td>
         </tr>
     </table>
     <br>
