--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="25">
         <tr>
-            <td> <img src="Image\download.png" alt="binoy's Profile picture"></td>
+            <td> <img src="Image/download.png" alt="binoy's Profile picture"></td>
             <td><h1><em><strong>Binoy Mahata</strong></em></h1>
                 <p><em>Student of <strong><a href="https://iti.wb.gov.in/institute/home/jhargram">Jhargram Govt ITI</a></strong></em></p>
                 <br>
