--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <td><h1><em><strong>Binoy Mahata</strong></em></h1>
                 <p><em>Student of <strong><a href="https://iti.wb.gov.in/institute/home/jhargram">Jhargram Govt ITI</a></strong></em></p>
                 <br>
-                <p>Naturally I am a Student, after completing my <b>graguation degree</b> try to find new varriables to improve my standings in a better Place.</p></td>
+                <p>Naturally I am a Student, after completing my <b>graduation degree</b> try to find new varriables to improve my standings in a better Place.</p></td>
         </tr>
     </table>
     <br>
